# tonel

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  config.toml  migrate
config/: deploy.sh  tonel.service
migrations/: 001_init.sql  002_update.sql
src/: book.rs  config.rs  error.rs  logger.rs  main.rs  session.rs  state.rs  utils.rs
src/cbq/: admin.rs  flyer.rs  mod.rs  proxy.rs  v2ray.rs
src/db/: flyer.rs  invites.rs  karbars.rs  mod.rs  proxies.rs  settings.rs  v2rays.rs
src/payam/: mod.rs
