[package]
name = "tonel"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
rand = "0.9.1"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["full"] }

[dependencies.reqwest]
version = "0.12.22"
default-features = false
features = ["socks", "rustls-tls", "charset", "http2"]

[dependencies.teloxide]
version = "0.16.0"
features = ["sqlite-storage-rustls", "macros", "throttle"]

[dependencies.sqlx]
version = "0.8.6"
features = ["sqlite", "runtime-tokio-rustls"]
